backup/version2/contents/publications.md
<ol class="pub-items">
  <li>
    <strong>Zixi Jiang</strong>, Kexin Cao, Fang Ge, and Zhusheng Huang. Multi-Omics Graph Attention Network for Key Gene Prediction in Triple-Negative Breast Cancer. <em>IEEE Transactions on Computational Biology and Bioinformatics</em>, 2026.
    <span class="pub-links"><a href="https://ieeexplore.ieee.org/document/11478305" target="_blank" rel="noopener">IEEE Xplore</a> · <a href="https://doi.org/10.1109/tcbbio.2026.3682485" target="_blank" rel="noopener">DOI</a></span>
  </li>
  <li>
    Chunchun Li, Xin Ding, Huayang Zhang, Dejiong Wang, Ziyang Wang, <strong>Zixi Jiang</strong>, and Yu Lei. Named Entity Recognition Method for Tea Tree Pests and Diseases Based on BERT BiLSTM CRF. <em>Transactions of the Chinese Society for Agricultural Machinery</em>, 56(11):517-527, 2025.
    <span class="pub-links"><a href="https://www.j-csam.org/jcsam/article/abstract/20251150?st=article_issue" target="_blank" rel="noopener">Paper</a></span>
  </li>
</ol>

<h3>Manuscripts and Ongoing Work</h3>
<ol class="pub-items">
  <li>
    <strong>Zixi Jiang</strong> and collaborators. DeepLNP: A Multi-Modal Discriminative Model with Four-Component Encoding for Lipid Nanoparticle Formulation Property Prediction. Ongoing, 2026-present.
  </li>
  <li>
    <strong>Zixi Jiang</strong> and collaborators. AdaptiveGaitSegNet: An Innovative Model with Advanced Feature Extraction for Enhanced Parkinson's Disease Gait Recognition. Under review, 2024-present.
  </li>
</ol>
