backup/version3/contents/publications.md
<h3>Peer-Reviewed Publications</h3>
<ol class="pub-items">
  <li>
    <strong>Zixi Jiang</strong>, Kexin Cao, Fang Ge, and Zhusheng Huang. Multi-Omics Graph Attention Network for Key Gene Prediction in Triple-Negative Breast Cancer. <em>IEEE/ACM Transactions on Computational Biology and Bioinformatics</em>, 2026.
    <span class="pub-links"><a href="https://ieeexplore.ieee.org/document/11478305" target="_blank" rel="noopener">IEEE Xplore</a> · <a href="https://doi.org/10.1109/tcbbio.2026.3682485" target="_blank" rel="noopener">DOI</a></span>
  </li>
  <li>
    Chunchun Li, Xin Ding, Huayang Zhang, Dejiong Wang, Ziyang Wang, <strong>Zixi Jiang</strong>, and Yu Lei. A Named Entity Recognition Method for Tea Plant Pests and Diseases Based on BERT-BiLSTM-CRF. <em>Transactions of the Chinese Society for Agricultural Machinery</em>, 56(11):517-527, 2025.
    <span class="pub-links"><a href="https://www.j-csam.org/jcsam/article/abstract/20251150?st=article_issue" target="_blank" rel="noopener">Paper</a></span>
  </li>
</ol>

<h3>Manuscripts and Ongoing Work</h3>
<ol class="pub-items">
  <li>
    <strong>Zixi Jiang</strong> and collaborators. DeepLNP: A Multi-Modal Discriminative Model with Four-Component Encoding for Lipid Nanoparticle Formulation Property Prediction. Target venue: IEEE International Conference on Bioinformatics and Biomedicine, ongoing, 2026-present.
  </li>
  <li>
    <strong>Zixi Jiang</strong> and collaborators. AdaptiveGaitSegNet: An Innovative Model with Advanced Feature Extraction for Enhanced Parkinson's Disease Gait Recognition. Under review at <em>IEEE Transactions on Human-Machine Systems</em>, 2024-present.
  </li>
</ol>

<h3>Patents</h3>
<ol class="pub-items">
  <li>
    <strong>Zixi Jiang</strong>, Nannan Zhu, Yanan Ren, Fanshuo Liu, et al. Fault-Waveform Analysis Method for Industrial Substation Closing-Resistor Oscillography Based on the YOLOv8 Neural Network. CN Patent No. 119205606B, granted 2025.
    <span class="pub-links"><a href="static/assets/patent/ZL%202024%201%200432228.1.pdf" target="_blank" rel="noopener">Patent Certificate</a></span>
  </li>
  <li>
    <strong>Zixi Jiang</strong> and collaborators. National Invention Patent Application No. 2025104224368. In substantive examination, 2025.
  </li>
</ol>

<h3>Software Copyrights</h3>
<ol class="pub-items">
  <li>
    YOLOv8-Based Fault-Waveform Analysis System for Industrial Substation Closing-Resistor Oscillography V1.0. Registration No. 2024SR0719404, 2024.
    <span class="pub-links"><a href="static/assets/copyright/2024SR0719404.pdf" target="_blank" rel="noopener">Certificate</a></span>
  </li>
  <li>
    Knowledge-Based Question Answering System for Tea Plant Pests and Diseases V1.0. Registration No. 2024SR0720539, 2024.
    <span class="pub-links"><a href="static/assets/copyright/2024SR0720539.pdf" target="_blank" rel="noopener">Certificate</a></span>
  </li>
  <li>
    Blockchain-Based Fair Transaction System for Data Elements V1.0. Registration No. 2024SR0721874, 2024.
    <span class="pub-links"><a href="static/assets/copyright/2024SR0721874.pdf" target="_blank" rel="noopener">Certificate</a></span>
  </li>
  <li>
    YOLOv8-Based Industrial Fault-Indicator Detection System V1.0. Registration No. 2024SR0726917, 2024.
    <span class="pub-links"><a href="static/assets/copyright/2024SR0726917.pdf" target="_blank" rel="noopener">Certificate</a></span>
  </li>
  <li>
    Graph-WaveNet-Based Vehicle-Trajectory Prediction System V1.0. Registration No. 2025SR0673325, 2025.
    <span class="pub-links"><a href="static/assets/copyright/2025SR0673325.pdf" target="_blank" rel="noopener">Certificate</a></span>
  </li>
</ol>
